<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent"
    tools:context=".ui.gamedetail.GameDetailActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_begin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintGuide_end="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:elevation="2dp"
        app:srcCompat="@drawable/img_oval"
        android:alpha=".7"
        android:outlineProvider="none"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgGame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/img_sample_game"
        android:layout_height="300dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgGradient"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="@id/imgGame"
        app:layout_constraintStart_toStartOf="@id/imgGame"
        app:layout_constraintEnd_toEndOf="@id/imgGame"
        app:srcCompat="@drawable/view_gradient_game_detail"
        android:layout_height="126dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtGameName"
        app:layout_constraintBottom_toTopOf="@id/txtDeveloperAndReleaseDate"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        android:layout_marginBottom="4dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="@font/arial_regular"
        android:text="@string/sample_game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icRecommendationLeveling"
        app:layout_constraintTop_toTopOf="@id/txtGameName"
        app:layout_constraintBottom_toBottomOf="@id/txtGameName"
        app:layout_constraintStart_toEndOf="@id/txtGameName"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/ic_meh"
        android:layout_width="30dp"
        android:layout_height="30dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDeveloperAndReleaseDate"
        app:layout_constraintBottom_toTopOf="@id/recyclerviewGenres"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        android:layout_marginBottom="8dp"
        android:text="@string/sample_provider"
        android:textSize="12sp"
        android:alpha=".8"
        android:textColor="@color/white"
        android:fontFamily="@font/arial_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewGenres"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        tools:listitem="@layout/layout_item_genre"
        tools:itemCount="3"
        app:layout_constraintHorizontal_bias=".0"
        app:layout_constraintBottom_toBottomOf="@id/imgGradient"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        android:layout_width="0dp"
        android:layout_height="25dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/clOpinionsChart"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/recyclerviewGenres"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="8dp"
        android:layout_height="40dp">
        <include layout="@layout/layout_chart"/>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/clOpinionsChart"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        android:layout_height="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgGreenCircle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/img_circle_green"
            android:layout_width="13dp"
            android:layout_height="13dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtExceptionalHeader"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imgGreenCircle"
            app:layout_constraintTop_toTopOf="@id/imgGreenCircle"
            app:layout_constraintBottom_toBottomOf="@id/imgGreenCircle"
            android:text="@string/exceptional"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/arial_regular"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtExceptional"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txtExceptionalHeader"
            app:layout_constraintTop_toTopOf="@id/txtExceptionalHeader"
            app:layout_constraintBottom_toBottomOf="@id/txtExceptionalHeader"
            android:text="79"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="2dp"
            android:alpha=".6"
            android:fontFamily="@font/arial_regular"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgRedCircle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtExceptional"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/img_circle_red"
            android:layout_width="13dp"
            android:layout_height="13dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSkipHeader"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imgRedCircle"
            app:layout_constraintTop_toTopOf="@id/imgRedCircle"
            app:layout_constraintBottom_toBottomOf="@id/imgRedCircle"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/arial_regular"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSkip"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txtSkipHeader"
            app:layout_constraintTop_toTopOf="@id/txtSkipHeader"
            app:layout_constraintBottom_toBottomOf="@id/txtSkipHeader"
            android:text="79"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="2dp"
            android:alpha=".6"
            android:fontFamily="@font/arial_regular"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBlueCircle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtSkip"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/img_circle_blue"
            android:layout_width="13dp"
            android:layout_height="13dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtRecommendedHeader"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imgBlueCircle"
            app:layout_constraintTop_toTopOf="@id/imgBlueCircle"
            app:layout_constraintBottom_toBottomOf="@id/imgBlueCircle"
            android:text="@string/recommended"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/arial_regular"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtRecommended"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txtRecommendedHeader"
            app:layout_constraintTop_toTopOf="@id/txtRecommendedHeader"
            app:layout_constraintBottom_toBottomOf="@id/txtRecommendedHeader"
            android:text="79"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="2dp"
            android:alpha=".6"
            android:fontFamily="@font/arial_regular"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgMehCircle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtRecommended"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/img_circle_orange"
            android:layout_width="13dp"
            android:layout_height="13dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMehHeader"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imgMehCircle"
            app:layout_constraintTop_toTopOf="@id/imgMehCircle"
            app:layout_constraintBottom_toBottomOf="@id/imgMehCircle"
            android:text="@string/meh"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/arial_regular"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMeh"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txtMehHeader"
            app:layout_constraintTop_toTopOf="@id/txtMehHeader"
            app:layout_constraintBottom_toBottomOf="@id/txtMehHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".0"
            android:text="79"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginStart="2dp"
            android:alpha=".6"
            android:fontFamily="@font/arial_regular"
            android:layout_height="wrap_content"/>




    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>